Split into components

--- a/sites/index.html
+++ b/sites/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>oRotter</title>
-    <link rel="stylesheet" href="node_modules/reset-css/reset.css">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="css/orotter-bootstrap.css">
 </head>
 <body class="base">
     <header class="GlobalHeader">
