--- a/sites/index.html
+++ b/sites/index.html
@@ -9,7 +9,31 @@
     <header class="GlobalHeader">
         <div class="GlobalHeader-content">
             <div class="GlobalHeader-logo">
-                <h1 class="Logo">oRotter</h1>
+                <h1 class="Logo" style="width:130px;">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                    width="226.8px" height="59.5px" viewBox="0 0 226.8 59.5">
+                        g id="oRo">
+                            <path fill="#231815" d="M11.1,26c3.5-3.6,8.1-5.5,13.1-5.5c5,0,9.6,2,13.1,5.5c3.5,3.6,5.4,8.3,5.4,13.3c0,5-1.9,9.8-5.4,13.3
+                                c-3.5,3.6-8,5.4-13.1,5.4s-9.6-1.9-13.1-5.4c-3.5-3.6-5.4-8.3-5.4-13.3C5.7,34.3,7.6,29.6,11.1,26z M24.2,51.1
+                                c6.1,0,11.1-5.1,11.1-11.7s-4.9-11.8-11.1-11.8c-6.1,0-11.1,5.1-11.1,11.8C13,46,18.1,51.1,24.2,51.1z"/>
+                            <path fill="#231815" d="M86.4,26c3.5-3.6,8.1-5.5,13.1-5.5c5,0,9.6,2,13.1,5.5c3.5,3.6,5.4,8.3,5.4,13.3c0,5-1.9,9.8-5.4,13.3
+                                c-3.5,3.6-8,5.4-13.1,5.4c-5.1,0-9.6-1.9-13.1-5.4C83,49.1,81,44.4,81,39.3C81,34.3,82.9,29.6,86.4,26z M99.5,51.1
+                                c6.1,0,11.1-5.1,11.1-11.7s-4.9-11.8-11.1-11.8c-6.1,0-11.1,5.1-11.1,11.8C88.4,46,93.5,51.1,99.5,51.1z"/>
+                            <path fill="#231815" d="M46.7,19.9c0-4.7,0.2-8.4,2.6-11.8c3.1-4.2,8.1-6.7,13.9-6.7c9.2,0,16.5,7.4,16.5,16.5
+                                c0,8.4-5.7,14.9-14.5,15.8l18.4,24.4H73.2L54.9,32v26.1h-8.2V19.9z M63.2,26.9c5.1,0,9.2-4.1,9.2-9.2c0-5.1-4.1-9.2-9.2-9.2
+                                c-5.6,0-9.5,3.8-9.5,9.2C53.8,23.3,57.4,26.9,63.2,26.9z"/>
+                            <path fill="#231815" d="M184.8,58.1c-5.1,0-9.7-2-13.3-5.5c-3.6-3.6-5.5-8.3-5.5-13.3c0-10.4,8.2-18.9,19.1-18.9
+                                c10.6,0,17.7,7.6,17.7,20.2c0,0.6-0.1,1.1-0.1,1.8h-28.7c0.9,5.2,4.9,8.6,10.7,8.6c3.3,0,5.9-1.1,8.3-3.3l5,5
+                                C194,56.3,189.7,58.1,184.8,58.1z M195.1,35.9c-1-6-4.8-9.4-10.3-9.4c-5.2,0-9.8,3.6-11.1,9.4H195.1z"/>
+                            <path fill="#231815" d="M207.6,36.5c0-9.9,6.7-16.2,16.8-16.2c0.3,0,0.7,0,1.1,0V28c-0.3,0-0.6,0-1,0c-6.1,0-9.4,2.9-9.4,8.5v21.7
+                                h-7.5V36.5z"/>
+                            <path fill="#231815" d="M120.8,21.4h3.7v-8.7h7.3v8.7h8.3v6.5h-8.3v11.6c0,7.2,2.3,10.5,8.7,11.2v7.5c-10.4-0.2-16.1-6-16.1-16.5
+                                V27.9h-3.7V21.4z"/>
+                            <path fill="#231815" d="M144.5,21.4h3.7v-8.7h7.3v8.7h8.3v6.5h-8.3v11.6c0,7.2,2.3,10.5,8.7,11.2v7.5c-10.4-0.2-16.1-6-16.1-16.5
+                                V27.9h-3.7V21.4z"/>
+                        </g>
+                    </svg>
+                </h1>
             </div>
             <div class="GlobalHeader-search">
                 <div class="RoundInput RoundInput--primary">
