--- a/sites/index.html
+++ b/sites/index.html
@@ -37,8 +37,17 @@
             </div>
             <div class="GlobalHeader-search">
                 <div class="RoundInput RoundInput--primary">
+                    <div class="RoundInput-icon">
+                        <div class="Icon">
+                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+	 width="16px" height="16px" viewBox="0 0 16 16">
+                                <path d="M2.8,14.9l3.5-3.5c0.9,0.5,1.9,0.9,3,0.9c3.1,0,5.6-2.5,5.6-5.6S12.4,1,9.3,1C6.1,1,3.6,3.5,3.6,6.6
+                                    c0,1.1,0.3,2.1,0.9,3L1,13.1L2.8,14.9z M9.3,10.3c-2,0-3.6-1.6-3.6-3.6S7.2,3,9.3,3s3.6,1.6,3.6,3.6C12.9,8.6,11.3,10.3,9.3,10.3z"
+                                    />
+                            </svg>
+                        </div>
+                    </div>
                     <input class="RoundInput-input" type="text" placeholder="ユーザーを検索">
-                    <div class="RoundInput-icon"></div>
                 </div>
             </div>
             <div class="GlobalHeader-avatar">
@@ -258,7 +267,17 @@
                             <div class="Tweet-footer">
                                 <div class="Tweet-actions">
                                     <div class="Tweet-action">
-                                        12
+                                        <div class="Icon">
+                                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+	 width="16px" height="16px" viewBox="0 0 16 16">
+                                                <path d="M15,6.545c0-0.276-0.224-0.499-0.501-0.499H9.935L8.502,1.811c-0.137-0.407-0.868-0.407-1.005,0L6.065,6.046H1.501
+                                                    C1.224,6.046,1,6.324,1,6.6c0,0.162,0.079,0.315,0.213,0.408l3.676,2.577l-1.442,4.249c-0.043,0.127-0.012,0.273,0.049,0.392
+                                                    c0.061,0.12,0.189,0.216,0.317,0.257c0.049,0.016,0.1,0.023,0.15,0.023c0.102,0,0.203-0.031,0.288-0.091L8,11.785l3.75,2.63
+                                                    c0.127,0.089,0.331,0.1,0.48,0.055c0.129-0.04,0.235-0.13,0.296-0.25s0.071-0.259,0.028-0.386l-1.442-4.249l3.675-2.577
+                                                    C14.921,6.914,15,6.708,15,6.545z"/>
+                                            </svg>
+                                        </div>
+                                        <div>12</div>
                                     </div>
                                 </div>
                             </div>
@@ -282,7 +301,17 @@
                             <div class="Tweet-footer">
                                 <div class="Tweet-actions">
                                     <div class="Tweet-action">
-                                        12
+                                        <div class="Icon">
+                                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+	 width="16px" height="16px" viewBox="0 0 16 16">
+                                                <path d="M15,6.545c0-0.276-0.224-0.499-0.501-0.499H9.935L8.502,1.811c-0.137-0.407-0.868-0.407-1.005,0L6.065,6.046H1.501
+                                                    C1.224,6.046,1,6.324,1,6.6c0,0.162,0.079,0.315,0.213,0.408l3.676,2.577l-1.442,4.249c-0.043,0.127-0.012,0.273,0.049,0.392
+                                                    c0.061,0.12,0.189,0.216,0.317,0.257c0.049,0.016,0.1,0.023,0.15,0.023c0.102,0,0.203-0.031,0.288-0.091L8,11.785l3.75,2.63
+                                                    c0.127,0.089,0.331,0.1,0.48,0.055c0.129-0.04,0.235-0.13,0.296-0.25s0.071-0.259,0.028-0.386l-1.442-4.249l3.675-2.577
+                                                    C14.921,6.914,15,6.708,15,6.545z"/>
+                                            </svg>
+                                        </div>
+                                        <div>12</div>
                                     </div>
                                 </div>
                             </div>
